--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <!--Page loader-->
 
-        <div class="PageLoader"><i class="fas fa-spinner spinner"></i></div>
+        <div class="pageLoader"><i class="fas fa-spinner spinner"></i></div>
 
 <!--En tete-->
 
@@ -29,37 +29,37 @@
 
 <!--Ligne de localisation-->
 
-       <div class="Location flex">
+       <div class="location  flex">
             <p><i class="fas fa-map-marker-alt"></i>Paris, Belleville</p>
        </div>
 
 <!--Bloc de présentation du site-->
 
-        <div class="About">
+        <div class="about">
             <h2>Réservez le menu qui vous convient</h2>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-            <a href="#restaurants_anchor" class="btn Explore">Explorer nos restaurants</a>
+            <a href="#restaurants_anchor" class="btn explore">explorer nos restaurants</a>
         </div>
 
  <!--Bloc du fonctionnement du site-->
 
-        <section class="HowTo">
+        <section class="howTo">
             <h2>Fonctionnement</h2>
-            <div class="HowToList">
+            <div class="howToList">
 
-                <div class="HowToStep flex">
-                    <div class="StepNumber flex"><span>1</span></div>
-                    <div class="StepText flex"><i class="fas fa-mobile-alt"></i><p>Choisissez un restaurant</p></div>
+                <div class="howToStep flex">
+                    <div class="stepNumber flex"><span>1</span></div>
+                    <div class="stepText flex"><i class="fas fa-mobile-alt"></i><p>Choisissez un restaurant</p></div>
                 </div>
     
-                <div class="HowToStep flex">
-                    <div class="StepNumber flex"><span>2</span></div>
-                    <div class="StepText flex"><i class="fas fa-list-ul"></i><p>Composez votre menu</p></div>
+                <div class="howToStep flex">
+                    <div class="stepNumber flex"><span>2</span></div>
+                    <div class="stepText flex"><i class="fas fa-list-ul"></i><p>Composez votre menu</p></div>
                 </div>
     
-                <div class="HowToStep flex">
-                    <div class="StepNumber flex"><span>3</span></div>
-                    <div class="StepText flex"><i class="fas fa-store"></i><p>Dégustez au restaurant</p></div>
+                <div class="howToStep flex">
+                    <div class="stepNumber flex"><span>3</span></div>
+                    <div class="stepText flex"><i class="fas fa-store"></i><p>Dégustez au restaurant</p></div>
                 </div>
 
             </div>
@@ -69,24 +69,24 @@
 
 <!--Bloc choix des restaurants-->
 
-        <section class="Restaurants">
-            <h2 id="RestaurantAnchor">Restaurants</h2>
+        <section class="restaurants">
+            <h2 id="restaurantAnchor">restaurants</h2>
 
-            <div class="RestaurantsBox">
+            <div class="restaurantsBox">
 
-                <div class="RestaurantCard">
-                    <a href="RestaurantsPages/la_palette_du_gout.html">
-                        <div class="RestaurantPic la_palette_du_gout">
+                <div class="restaurantCard">
+                    <a href="restaurantsPages/la_palette_du_gout.html">
+                        <div class="restaurantPic la_palette_du_gout">
                             <div class="New">Nouveau</div>
                         </div>
                     </a>
-                    <div class="RestaurantDetails flex">
-                        <div class="DetailsText flex">
-                            <p class="RestaurantName">La palette du goût</p>
+                    <div class="restaurantDetails flex">
+                        <div class="detailsText flex">
+                            <p class="restaurantName">La palette du goût</p>
                             <p>Ménilmontant</p>
                         </div>
                         <div class="Like flex">
-                            <svg id="FullHeart" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" viewBox="0 0 512 512">
+                            <svg id="fullHeart" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" viewBox="0 0 512 512">
                                 <defs>
                                     <linearGradient id="MyGradient" gradientTransform="rotate(120)">
                                         <stop offset="10%" stop-color="#9356DC"/>
@@ -95,25 +95,25 @@
                                 </defs>
                                 <path xmlns="http://www.w3.org/2000/svg" fill="url(#MyGradient)" d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"/>
                             </svg>
-                            <svg id="EmptyHeart" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="far" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" viewBox="0 0 512 512"><path fill="currentColor" d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"/>
+                            <svg id="emptyHeart" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="far" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" viewBox="0 0 512 512"><path fill="currentColor" d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"/>
                             </svg>
                         </div>
                     </div>
                 </div>
 
-                <div class="RestaurantCard">
-                    <a href="RestaurantsPages/la_note_enchantee.html">
-                        <div class="RestaurantPicEX la_note_enchantee">
+                <div class="restaurantCard">
+                    <a href="restaurantsPages/la_note_enchantee.html">
+                        <div class="restaurantPicEX la_note_enchantee">
                             <div class="New">Nouveau</div>
                         </div>
                     </a>
-                    <div class="RestaurantDetails flex">
-                        <div class="DetailsText flex">
-                            <p class="RestaurantName">La palette du goût</p>
+                    <div class="restaurantDetails flex">
+                        <div class="detailsText flex">
+                            <p class="restaurantName">La palette du goût</p>
                             <p>Ménilmontant</p>
                         </div>
                         <div class="Like flex">
-                            <svg id="FullHeart" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" viewBox="0 0 512 512">
+                            <svg id="fullHeart" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" viewBox="0 0 512 512">
                                 <defs>
                                     <linearGradient id="MyGradient" gradientTransform="rotate(120)">
                                         <stop offset="10%" stop-color="#9356DC"/>
@@ -122,24 +122,24 @@
                                 </defs>
                                 <path xmlns="http://www.w3.org/2000/svg" fill="url(#MyGradient)" d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"/>
                             </svg>
-                            <svg id="EmptyHeart" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="far" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" viewBox="0 0 512 512"><path fill="currentColor" d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"/>
+                            <svg id="emptyHeart" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="far" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" viewBox="0 0 512 512"><path fill="currentColor" d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"/>
                             </svg>
                         </div>
                     </div>
                 </div>
 
-                <div class="RestaurantCard">
-                    <a href="RestaurantsPages/a_la_francaise.html">
-                        <div class="RestaurantPic a_la_francaise">
+                <div class="restaurantCard">
+                    <a href="restaurantsPages/a_la_francaise.html">
+                        <div class="restaurantPic a_la_francaise">
                         </div>
                     </a>
-                    <div class="RestaurantDetails flex">
-                        <div class="DetailsText flex">
-                            <p class="RestaurantName">La palette du goût</p>
+                    <div class="restaurantDetails flex">
+                        <div class="detailsText flex">
+                            <p class="restaurantName">La palette du goût</p>
                             <p>Ménilmontant</p>
                         </div>
                         <div class="Like flex">
-                            <svg id="FullHeart" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" viewBox="0 0 512 512">
+                            <svg id="fullHeart" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" viewBox="0 0 512 512">
                                 <defs>
                                     <linearGradient id="MyGradient" gradientTransform="rotate(120)">
                                         <stop offset="10%" stop-color="#9356DC"/>
@@ -148,24 +148,24 @@
                                 </defs>
                                 <path xmlns="http://www.w3.org/2000/svg" fill="url(#MyGradient)" d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"/>
                             </svg>
-                            <svg id="EmptyHeart" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="far" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" viewBox="0 0 512 512"><path fill="currentColor" d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"/>
+                            <svg id="emptyHeart" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="far" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" viewBox="0 0 512 512"><path fill="currentColor" d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"/>
                             </svg>
                         </div>
                     </div>
                 </div>
 
-                <div class="RestaurantCard">
-                    <a href="RestaurantsPages/le_delice_des_sens.html">
-                        <div class="RestaurantPic le_delice_des_sens">
+                <div class="restaurantCard">
+                    <a href="restaurantsPages/le_delice_des_sens.html">
+                        <div class="restaurantPic le_delice_des_sens">
                         </div>
                     </a>
-                    <div class="RestaurantDetails flex">
-                        <div class="DetailsText flex">
-                            <p class="RestaurantName">La palette du goût</p>
+                    <div class="restaurantDetails flex">
+                        <div class="detailsText flex">
+                            <p class="restaurantName">La palette du goût</p>
                             <p>Ménilmontant</p>
                         </div>
                         <div class="Like flex">
-                            <svg id="FullHeart" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" viewBox="0 0 512 512">
+                            <svg id="fullHeart" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" viewBox="0 0 512 512">
                                 <defs>
                                     <linearGradient id="MyGradient" gradientTransform="rotate(120)">
                                         <stop offset="10%" stop-color="#9356DC"/>
@@ -174,7 +174,7 @@
                                 </defs>
                                 <path xmlns="http://www.w3.org/2000/svg" fill="url(#MyGradient)" d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"/>
                             </svg>
-                            <svg id="EmptyHeart" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="far" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" viewBox="0 0 512 512"><path fill="currentColor" d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"/>
+                            <svg id="emptyHeart" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" data-prefix="far" data-icon="heart" class="svg-inline--fa fa-heart fa-w-16" role="img" viewBox="0 0 512 512"><path fill="currentColor" d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"/>
                             </svg>
                         </div>
                     </div>
